LPS-71532 Fix CSS to avoid icon overlapping

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -225,12 +225,15 @@
 	}
 
 	.select-field-trigger {
+		@extend %flex-space-between;
 		border-bottom: 2px solid #869CAD;
 		color: #869CAD;
-		display: block;
-		height: auto;
-		padding: 8px 5px;
-		text-decoration: none;
+		padding: 3px 0 3px 5px;
+
+		.option-selected {
+			@extend %text-ellipsis;
+			overflow: hidden;
+		}
 
 		.option-selected-placeholder {
 			color: rgba(134, 156, 173, 0.4);
